--- a/Web/WEB/index.html
+++ b/Web/WEB/index.html
@@ -2,7 +2,8 @@
         <!--[if lt IE 7]> <html class="lt-ie9 lt-ie8 lt-ie7" lang="en-US"> <![endif]-->
         <!--[if IE 7]>    <html class="lt-ie9 lt-ie8" lang="en-US"> <![endif]-->
         <!--[if IE 8]>    <html class="lt-ie9" lang="en-US"> <![endif]-->
-        <!--[if gt IE 8]><!--> <html lang="en-US"> <!--<![endif]-->
+        <!--[if gt IE 8]><!--> 
+ <html lang="en-US"> <!--<![endif]-->
         <head>
                 <!-- META TAGS -->
                 <meta charset="UTF-8" />
