--- a/Web/WEB/nav.html
+++ b/Web/WEB/nav.html
@@ -32,9 +32,10 @@
                             <li><a href="hot.html" target="_parent">加精帖子</a></li>
                             <li><a href="linkME.html" target="_parent">联系我们</a></li>
                             <li><a href="linkMEContent.html" target="_parent">常见反馈</a></li>
+                            <li><a href="User/addarticle.html" target="_parent">发表文章</a></li>
                             <li id="reg"><a href="User/add.html " target="_parent">注册</a></li>
                             <li id="login"><a href="User/login.html " target="_parent">登录</a></li>
-                            <li id="exit"><span id="name"></span><a href="ashx/exit.ashx" target="_parent">注销</a></li>
+                           <li id="exit"><span id="name"></span><a href="ashx/exit.ashx" target="_parent">注销</a></li>
                         </ul>
                     </div>
                 </nav>
