--- a/Web/WEB/index.html
+++ b/Web/WEB/index.html
@@ -146,14 +146,14 @@ if(ifm != null && subWeb != null) {
                 <!-- Start of Footer -->
   
                         <!-- end of #footer -->
-
+            <footer>
                         <!-- Footer Bottom -->
                         <div id="footer-bottom-wrapper">
                                 <div id="footer-bottom" class="container">
                                         <div class="row">
                                                 <div class="span6">
                                                         <p class="copyright">
-                                                                Copyright © 2016. All Rights Reserved by 中职院无极限团队  <a href="#" title="网页板" target="_blank">chenglingr</a>
+                                                                Copyright © 2016. All Rights Reserved by 中职院无极限团队  <a href="Admin/login.html" title="管理员" target="_blank">管理员登录</a>
                                                         </p>
                                                 </div>
                                                 <div class="span6">
